[metadata]
name = bareon
version = 1.0.0.dev1
author = Mirantis
author-email = openstack-dev@lists.openstack.org
summary = Bareon
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    bareon

[entry_points]
console_scripts =
    bareon-provision = bareon.cmd.agent:provision
    bareon-partition = bareon.cmd.agent:partition
    bareon-configdrive = bareon.cmd.agent:configdrive
    bareon-copyimage = bareon.cmd.agent:copyimage
    bareon-bootloader = bareon.cmd.agent:bootloader
    bareon-build-image = bareon.cmd.agent:build_image
    bareon-ironic-callback = bareon.cmd.ironic_callback:main
    bareon-mkbootstrap = bareon.cmd.agent:mkbootstrap

bareon.drivers =
    nailgun = bareon.drivers.nailgun:Nailgun
    nailgun_simple = bareon.drivers.simple:NailgunSimpleDriver
    nailgun_build_image = bareon.drivers.nailgun:NailgunBuildImage
    ironic = bareon.drivers.nailgun:Ironic
    bootstrap_build_image = bareon.drivers.bootstrap:BootstrapBuildImage

bareon.actions =
    do_partitioning = bareon.actions.partitioning:PartitioningAction
    do_configdrive = bareon.actions.configdrive:ConfigDriveAction
    do_copyimage = bareon.actions.copyimage:CopyImageAction
    do_bootloader = bareon.actions.bootloader:BootLoaderAction

[pbr]
autodoc_index_modules = True
# this variable is needed to avoid including files
# from other subprojects in this repository
skip_git_sdist = True

[global]
setup-hooks =
    pbr.hooks.setup_hook
    bareon.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
